<resources>
    <string name="app_name">Startrans</string>
    <string name="PREFERENCES_SETTINGS">settings</string>
    <string name="mainActivity">Личный Кабинет</string>
    <string name="registerActivity">Регистрация</string>
    <string name="title_activity_maps">Map</string>
    <string name="api_key">AIzaSyDsc1BDghFZ7hLhMRGKUz20O6BKC9tj-CE</string>
    <string name="tvRegister"><u>ЗАРЕГИСТРИРОВАТЬСЯ</u></string>
    <string name="tvForgotPassword"><u>ЗАБЫЛИ ПАРОЛЬ?</u></string>
    <string name="loginStartrans">STARTRANS</string>
    <string name="loginEmail">e-mail</string>
    <string name="loginPassword">пароль</string>
    <string name="loginBtnLogin">ВОЙТИ</string>
    <string name="mainNumber">№</string>
    <string name="mainTvYourOrders">ВАШИ ЗАЯВКИ</string>
    <string name="mainBtnCount">ПРОСЧИТАТЬ СТОИМОСТЬ</string>
    <string name="mainBtnCreateOrder">СОЗДАТЬ ЗАЯВКУ</string>
    <string name="mapsTvWeight">Масса: ~</string>
    <string name="mapsTvTones">тонн</string>
    <string name="mapsTvSize">Объем: ~</string>
    <string name="mapsTvMeters">м.куб.</string>
    <string name="mapsBtnFinalCount">ПРОСЧИТАТЬ</string>
    <string name="orderBtnDate">ВЫБЕРИТЕ ДАТУ</string>
    <string name="orderBtnTime">ВЫБЕРИТЕ ВРЕМЯ</string>
    <string name="orderEtFrom">Место загрузки</string>
    <string name="orderTo">Место выгрузки</string>
    <string name="orderTvVehicleType">ТИП АВТОМОБИЛЯ</string>
    <string name="orderTvWeight">Масса: ~</string>
    <string name="orderTvTones">тонн</string>
    <string name="orderTvSize">Объем: ~</string>
    <string name="orderTvMeters">м.куб.</string>
    <string name="orderTvAdds">ПРИМЕЧАНИЯ</string>
    <string name="orderBtnSendOrder">Отправить заявку</string>
    <string name="priceTvWeightSize">ТОННАЖ ОБЪЕМ</string>
    <string name="priceTvKiev">КИЕВ</string>
    <string name="priceTvUkraine">УКРАИНА</string>
    <string name="registerEtEmail">E-mail</string>
    <string name="registerEtPassword">Пароль</string>
    <string name="registerEtPassword1">Подтвердите пароль</string>
    <string name="registerEtName">ФИО</string>
    <string name="registerEtCompany">Компания</string>
    <string name="registerEtPhone">Телефон</string>
    <string name="registerEtCity">Город</string>
    <string name="registerBtnRegister">ЗАРЕГИСТРИРОВАТЬСЯ</string>
    <string name="etForgotEmail">введите свой e-mail здесь</string>
    <string name="infoTvPhone">ТЕЛЕФОН</string>
    <string name="infoTvPhone1">097 373 96 67</string>
    <string name="infoTvPhone2">099 445 99 46</string>
    <string name="infoTvEmailHead">E-MAIL</string>
    <string name="infoTvEmail">startrans.trucks@gmail.com</string>
</resources>