<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/registerEtEmail"
        android:inputType="textEmailAddress"
        android:textColorHint="@drawable/selector"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/registerEtPassword"
        android:inputType="text"
        android:textColorHint="@drawable/selector"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/etPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/registerEtPassword1"
        android:inputType="text"
        android:textColorHint="@drawable/selector"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/registerEtName"
        android:inputType="textMultiLine"
        android:textColorHint="@drawable/selector"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/etCompany"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/registerEtCompany"
        android:inputType="text"
        android:textColorHint="@drawable/selector"
        tools:ignore="Autofill"/>

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/registerEtPhone"
        android:inputType="number"
        android:textColorHint="@drawable/selector"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/etCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/registerEtCity"
        android:inputType="text"
        android:textColorHint="@drawable/selector"
        tools:ignore="Autofill" />

    <Button
        android:padding="15dp"
        android:id="@+id/btnRegister"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/registerBtnRegister"
        android:textColor="@color/btnText"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />
</LinearLayout>