<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="#1C3ACA"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/loginStartrans"
            android:textColor="#FFFFFF"
            android:textSize="44sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableStart="@drawable/ic_baseline_account_circle_24"
            android:drawablePadding="10dp"
            android:hint="@string/loginEmail"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:textColorHint="@drawable/selector"
            android:textSize="18sp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/etPassword"
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableStart="@drawable/ic_baseline_vpn_key_24"
            android:drawablePadding="8dp"
            android:hint="@string/loginPassword"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@drawable/selector"
            android:textSize="18sp"
            android:autofillHints="" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/loginBtnLogin"
            android:textColor="@color/btnText"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/tvForgotPassword"
            android:textColor="@color/btnText"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:text="@string/tvRegister"
            android:textColor="@color/btnText"
            android:textSize="14sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone" />

    </LinearLayout>


</LinearLayout>