<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/mapsTvWeight"
            android:textColor="@color/text" />

        <EditText
            android:id="@+id/etWeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:inputType="numberDecimal"
            android:textColor="@color/text"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/mapsTvTones"
            android:textColor="@color/text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/mapsTvSize"
            android:textColor="@color/text" />

        <EditText
            android:id="@+id/etSize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:inputType="numberDecimal"
            android:textColor="@color/text"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/mapsTvMeters"
            android:textColor="@color/text"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity"
        map:cameraZoom= "10"/>

        <ImageButton
            android:id="@+id/btnClearMap"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_baseline_refresh_24"
            android:background="@android:color/white"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <Button
        android:id="@+id/btnFinalCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/mapsBtnFinalCount"
        android:textColor="@color/btnText" />

</LinearLayout>

